--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "vue-loader": "^16.0.0-beta.8"
     },
     "dependencies": {
+        "google-maps-api-loader": "^1.1.1",
         "postcss": "^8.1.1",
         "sweetalert": "^2.1.2",
         "vue-router": "^4.0.0-beta.12",
