--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "postcss": "^8.1.1",
         "socket.io-client": "^2.4.0",
         "sweetalert": "^2.1.2",
+        "tiny-slider": "^2.9.3",
         "vue-router": "^4.0.0-beta.12",
         "vuex": "^4.0.0-beta.4"
     }
