--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.15.0",
         "@vue/compiler-sfc": "^3.0.0",
-        "admin-lte": "^3.0.5",
+        "admin-lte": "3.1",
         "axios": "^0.19",
         "bootstrap": "^4.5.2",
         "bootstrap-datepicker": "^1.9.0",
